--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <div class="winner hidden">Player 1 wins!</div>
         <button class="playAgain hidden">Play Again</button>
 </div>
+<script src="app.js"></script>
 
 </body>
 </html>
